--- a/.github/workflows/notify-on-config-change.yml
+++ b/.github/workflows/notify-on-config-change.yml
@@ -6,9 +6,8 @@ name: notify-on-config-change
 on:
   push:
     branches:
-      - '[a-zA-Z][0-9]+'
+      - '*'
       - '!main'
-
 
 jobs:
   notify-on-config-change:
@@ -32,9 +31,8 @@ jobs:
   
     - name: Start CD
       run: |
-          gh workflow run cd.yml -f environment="$ACTIVE_ENVIRONMENT" -f commit_id="$PROMOTED_COMMIT_ID" -f promotion=n -f image_name="$IMAGE_NAME" -r main --repo "$SRC_REPO"   
+          gh workflow run cd.yaml -f environment="$ACTIVE_ENVIRONMENT" -f commit_id="$PROMOTED_COMMIT_ID" -f version="$VERSION" -r main --repo "$SRC_REPO"   
       env:
         GH_TOKEN: ${{ secrets.CD_BOOTSTRAP_TOKEN }}
         ACTIVE_ENVIRONMENT: ${{ github.ref_name }}
         SRC_REPO: ${{ vars.SRC_REPO }}
-        VERSION: ${{ env.VERSION }} 
